--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Hello React</title>
 </head>
+<nav class='navbar'>
+  <a href="/" class="navbar-brand">Chatty</a>
+</nav>
 <body>
   <div id="react-root"></div>
   <script src="/build/bundle.js"></script>
